app/src/cart.css
.cart-component-container {
  display: flex;
  flex-direction: row;
}

.cart-container {
  background-color: white;
  margin: 25px;
  margin-bottom: 0px;
  padding: 15px;
  height: 100%;
}

.cart-large {
  width: 66%;
}

.checkout-details-small {
  font-family: "Italianno", cursive;
  width: 34%;
}

.checkout-details-large {
  width: 55%;
  display: flex;
  flex-direction: column;
  margin-top: 20px;
}

.checkout-details-label {
  font-weight: bold;
  width: 150px;
  display: inline-block;
  margin-bottom: 0px;
  margin-top: 5px;
}

.checkout-price-value {
  font-weight: normal;
  font-size: 20px;
}

.checkout-estimate {
  color: blue;
}

.checkout-estimate:hover {
  opacity: 0.5;
  cursor: pointer;
}

.cart-piece {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  margin-bottom: 15px;
}

.cart-item-image-container {
  margin-right: 50px;
}

.piece-image-large {
  width: 15vw;
  height: 15vw;
}

.piece-image-small {
  width: 10vw;
  height: 10vw;
}

.cart-details-container {
  font-family: "Italianno", cursive;
  width: 50%;
}

.cart-piece-details-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.cart-piece-title {
  font-family: "Montserrat";
  font-weight: 400px;
  font-size: 18px;
  text-transform: uppercase;
}

.cart-piece-artist {
  color: #3e6079;
  font-size: 14px;
}

.cart-action:hover {
  color: crimson;
}

.cart-item-details-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 125px;
}

.cart-item-message {
  margin: 5px;
  fontsize: 10px;
}

.cart-item-bottom {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-end;
}

.cart-item-date {
  font-weight: bold;
  font-size: 22px;
}

.cart-piece-price {
  font-family: "Gotham";
  color: #3e6079;
}

.value {
  font-size: 24px;
}

.checkout-step-container {
  align-items: center;
  background-color: white;
  padding: 10px;
  margin: 5px;
  padding-left: 60px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.checkout-step-container-inactive:hover {
  background-color: #3e607969;
  cursor: pointer;
}

.checkout-step-label-container {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.checkout-step-number-container {
  border-radius: 50%;
  height: 60px;
  width: 60px;
  background-color: #3e6079;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 35px;
}

.checkout-step-number {
  color: white;
  font-size: 36px;
  font-family: none;
}

.checkout-step-label {
  font-family: none;
  font-weight: bold;
  font-size: 25px;
}

.checkout-step-forms-container {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

.checkout-step-form-container {
  margin-top: 15px;
}

.checkout-step-account-toggle {
  text-decoration: underline;
  color: #3e6079;
  padding-left: 25px;
  cursor: pointer;
}

.finalize-payment-details-container {
  margin-left: 25px;
}

.finalize-payment-payment-container {
  display: flex;
  flex-direction: column;
  margin-top: 50px;
  height: 200px;
}

.payment-details-container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.payment-details-section {
  margin-bottom: 8px;
}

.payment-details-title {
  font-family: none;
  font-weight: bold;
  font-size: 16px;
  margin-bottom: 5px;
}

.shipping-rate-container {
  margin-bottom: 15px;
}

.shipping-rate-radio {
  width: 25px;
}

.shipping-rate-details {
  margin-top: 7px;
  margin-left: 40px;
  color: green;
}

.payment-details-details-container {
  margin-left: 3px;
}

.payment-details-details {
  font-family: none;
  font-size: 12px;
  margin-bottom: 1px;
}

